force-app/main/default/objects/BrillioFC__Object_Detail__c/BrillioFC__Object_Detail__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Object Detail</label>
    <nameField>
        <label>ForceClinic Object Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Object Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>