force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__API_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__API_Name__c</fullName>
    <label>API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>