force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__Describe_URL__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Describe_URL__c</fullName>
    <label>Describe URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>