force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__External_Full_API_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__External_Full_API_Name__c</fullName>
    <externalId>true</externalId>
    <label>External Full API Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>