force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__External_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__External_Record_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Record Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>