force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__Number_of_Active_WF_Rules__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_Active_WF_Rules__c</fullName>
    <label>Number of Active WF Rules</label>
    <summaryFilterItems>
        <field>BrillioFC__Automation_Rule_Detail__c.BrillioFC__Type__c</field>
        <operation>equals</operation>
        <value>Workflow Rule</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>BrillioFC__Automation_Rule_Detail__c.BrillioFC__isActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Automation_Rule_Detail__c.BrillioFC__Object_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>