force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__Number_of_UnAssigned_RecordTypes__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_UnAssigned_RecordTypes__c</fullName>
    <label>Number of UnAssigned RecordTypes</label>
    <summaryFilterItems>
        <field>BrillioFC__Record_Types__c.BrillioFC__Is_Assigned_To_Profile__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Record_Types__c.BrillioFC__Object_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>