force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__NumberofActiveTriggers__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__NumberofActiveTriggers__c</fullName>
    <label>Number of Active Triggers</label>
    <summaryForeignKey>BrillioFC__Apex_Trigger_Detail__c.BrillioFC__Object_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>