force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__NumberofCustomFields__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__NumberofCustomFields__c</fullName>
    <inlineHelpText>This includes count of custom fields and not the packaged fields.</inlineHelpText>
    <label>Number of Custom Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>