force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__NumberofStdFields__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__NumberofStdFields__c</fullName>
    <label>Number of Std Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>