force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__Org_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Org_Detail__c</fullName>
    <label>ForceClinic Org Detail</label>
    <referenceTo>BrillioFC__Org_Details__c</referenceTo>
    <relationshipLabel>Object Details</relationshipLabel>
    <relationshipName>ForceClinic_Object_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>