force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__ShowInRelatedList__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ShowInRelatedList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show In Related List</label>
    <type>Checkbox</type>
</CustomField>