force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__Total_Number_of_Layouts__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Total_Number_of_Layouts__c</fullName>
    <label>Total Number of Layouts</label>
    <summaryForeignKey>BrillioFC__Page_Layout__c.BrillioFC__Object_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>