force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__Total_Number_of_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Total_Number_of_Record_Types__c</fullName>
    <label>Total Number of Record Types</label>
    <summaryForeignKey>BrillioFC__Record_Types__c.BrillioFC__Object_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>