force-app/main/default/objects/BrillioFC__Object_Detail__c/fields/BrillioFC__Total_Number_of_Triggers__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Total_Number_of_Triggers__c</fullName>
    <label>Total Number of Triggers</label>
    <summaryFilterItems>
        <field>BrillioFC__Apex_Trigger_Detail__c.BrillioFC__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>BrillioFC__Apex_Trigger_Detail__c.BrillioFC__Object_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>